# move_demo

./: CMakeLists.txt  package.xml
launch/: all_server.launch  move_demo.launch  move_group_interface_tutorial.launch  planning_scene_tutorial.launch
scripts/: state.py
src/: add_object_server.cpp  collision_detection.cpp  draw_circle.cpp  draw_circle_fake.cpp  draw_circle_server.cpp  gripper_position_pub.cpp  move_above_server.cpp  move_along_contour_server.cpp  move_demo.cpp  move_to_edge_server.cpp  object_position_pub.cpp  pos_pub.cpp  sub.cpp  tns_pub.cpp
srv/: MoveToEdge.srv
